deploy/bold-upgrade-center/bold-upgrade-center.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bold-upgrade-center
  namespace: bold-services
  labels:
    app.kubernetes.io/name: bold-upgrade-center
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bold-upgrade-center
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bold-upgrade-center
    spec:
      imagePullSecrets:
        - name: dev-imagepull-secret
      serviceAccountName: bold-upgrade-center
      automountServiceAccountToken: true
      containers:
        - name: bold-upgrade-center
          image: docker.io/syncfusion/bold-upgrade-center:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          securityContext:
            runAsNonRoot: false
            runAsUser: 0
            runAsGroup: 0
          readinessProbe:
            httpGet:
              path: /upgrade-center/health-check
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /upgrade-center/health-check
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1536Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - mountPath: /app/App_Data
              name: upgrade-center-volume
      volumes:
        - name: tmp
          emptyDir: {}
        - name: upgrade-center-volume
          persistentVolumeClaim:
            claimName: bold-fileserver-claim
---
apiVersion: v1
kind: Service
metadata:
  name: bold-upgrade-center
  namespace: bold-services
  labels:
    app.kubernetes.io/name: bold-upgrade-center
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bold-upgrade-center
  ports:
    - name: http
      port: 80
      targetPort: http
