deploy/bold-upgrade-center/kong-ingress-upgrade-center.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bold-upgrade-center-ingress
  namespace: bold-services
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/connect-timeout: "300000"
    konghq.com/read-timeout: "300000"
    konghq.com/write-timeout: "300000"
    konghq.com/strip-path: "false"
    konghq.com/request-buffering: "true"
    konghq.com/response-buffering: "true"
spec:
  # tls:
  # - hosts:
  #   - example.com
  #   secretName: bold-tls
  rules:
  - # host: example.com
    http:
      paths:
      - path: /upgrade-center
        pathType: Prefix
        backend:
          service:
            name: bold-upgrade-center
            port:
              number: 80
